Refactor bit manipulation function `toggle_bits` to accept more than position to flip. Implement graycodes for combinations.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "<div align=\"right\">Massimo Nocentini\n",
+    "<br>June 20, 2016: Gray codes for combinations\n",
+    "<br>June 13, 2016: direct and loopless BRGC\n",
     "<br>June 7, 2016: theoretical intro\n",
     "<br>May 19, 2016: BRGC\n",
     "</div>\n",
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +300,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -404,14 +406,14 @@
        "    \"\"\"\n",
        "    code = 0\n",
        "\n",
-       "    def gen(i):\n",
+       "    def swap(i):\n",
        "        nonlocal code\n",
+       "        code = toggle_bits(code, i)\n",
+       "        yield code, i\n",
+       "\n",
+       "    def gen(i):\n",
        "        if i > -1:\n",
-       "            yield from gen(i-1)\n",
-       "            code = toggle_bit(code, i)\n",
-       "            yield code, i\n",
-       "            yield from gen(i-1)\n",
-       "             \n",
+       "            yield from itertools.chain(gen(i-1), swap(i), gen(i-1))\n",
        "\n",
        "    yield code, -1\n",
        "    yield from gen(n-1)\n",
@@ -422,7 +424,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +610,7 @@
        "    yield graycode, -1\n",
        "\n",
        "    for p in positions:\n",
-       "        graycode = toggle_bit(graycode, p)\n",
+       "        graycode = toggle_bits(graycode, p)\n",
        "        yield graycode, p\n",
        "\n",
        "```"
@@ -617,7 +619,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -639,7 +641,7 @@
        "[0, 1, 0, 2, 0, 1, 0]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -770,7 +772,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -821,13 +823,154 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "python_code(is_on, set_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gray codes for *combinations*\n",
+    "\n",
+    "Quoting the introduction from [Ruskey][cg], section 5.3, directly:\n",
+    "\n",
+    ">In this section we develop several Gray codes for *combinations*; that is, for $k$-subsets taken\n",
+    "from the set $[n] = \\lbrace1, 2, . . . , n\\rbrace$. For the most part, we identify each subset with a bitstring\n",
+    "of length $n$ with exactly $k$ ones; i.e., with an element of $\\textbf{B}(n, k)$. The\n",
+    "algorithms developed can be easily modified to generate the elements of the other common\n",
+    "representation, $\\textbf{A}(n, k)$ (recall that it is the set of monotonically increasing sequences\n",
+    "of length $k$ with elements taken from $[n]$; see (4.2) of [Combinatorial Generation][cg]).\n",
+    "There are many closeness conditions (or relations) that can be applied to bitstrings\n",
+    "with a fixed number of ones. In this section we consider five natural closeness relations.\n",
+    "These relations can be defined more generally on any set of strings in which the number of\n",
+    "occurances of each symbol is the same in each string.\n",
+    "   - the *transposition* condition: The two permutations differ in exactly *two*\n",
+    "positions: call the two positions $i$ and $j$. Example: $\\underline{0}021\\underline{1}$ and $\\underline{1}021\\underline{0}$. In this example the positions that\n",
+    "change are $i = 1$ and $j = 5$, and are underlined, as they will be in each of the example\n",
+    "that follows.\n",
+    "\n",
+    "[cg]:http://www.1stworks.com/ref/RuskeyCombGen.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using *transposition* relation\n",
+    "\n",
+    "Again in Ruskey words:\n",
+    "\n",
+    ">Algorithms satisfying the *transposition* criteria are sometimes said to be *revolving door*\n",
+    "algorithms. Imagine two rooms $A$ and $B$ connected by a revolving door that operates only\n",
+    "if occupied by two persons, one from each room. As a person leaves one room, they enter\n",
+    "the other, so the door acts to swap two persons. Given $k$ persons in the first room, the\n",
+    "problem is to sequence through all possible combinations of persons in the first\n",
+    "room so that each such combination occurs exactly once. This is precisely the same as the\n",
+    "question of generating combinations by transpositions.\n",
+    "The transposition closeness condition is handled in a manner similar to the way subsets\n",
+    "were done. That is, we rely on the classic recurrence relation for binomial coefficients, but\n",
+    "reverse the list corresponding to one of the terms.\n",
+    "\n",
+    "This yield to the following relation:\n",
+    "\n",
+    "$$\n",
+    "C(n,k) = \\left\\lbrace \n",
+    "\\begin{array}{ll}\n",
+    "0^{n} & \\text{if } k = 0 \\\\\n",
+    "1^{n} & \\text{if } k = n \\\\\n",
+    "C(n-1,k)\\cdot 0 \\circ \\bar{C}(n-1,k-1)\\cdot 1 & otherwise\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "In order to understand previous recurrence we draw a simple schema:\n",
+    "\n",
+    "$$\n",
+    "\\left.\n",
+    "\\begin{array}{ccccc}\n",
+    "1^{k-1} & 1 & 0 & 0^{n-k-2} & 0 \\\\\n",
+    "1^{k-1} & 0 & 1 & 0^{n-k-2} & 0 \\\\\n",
+    " &  &   \\vdots & & \\\\\n",
+    "1^{k-1} & 0^{n-k-2} & 1 & 0 & 0 \\\\\n",
+    "1^{k-1} & 0^{n-k-2} & 0 & 1 & 0 \\\\\n",
+    "&  &   = & & \\\\\n",
+    "1^{k-2} & 1 & 0^{n-k-1} & 1 & 0 \\\\\n",
+    "\\end{array}\n",
+    "\\right\\rbrace = C(n-1,k)\\cdot 0 \\\\\n",
+    "$$\n",
+    "\n",
+    "on the other hand, for the second part:\n",
+    "\n",
+    "$$\n",
+    "\\left.\n",
+    "\\begin{array}{ccccc}\n",
+    "1^{k-2} & 0 & 0^{n-k-1} & 1 & 1 \\\\\n",
+    "&  &   = & & \\\\\n",
+    "1^{k-2} & 0^{n-k-1} & 0 & 1 & 1 \\\\\n",
+    "1^{k-2} & 0^{n-k-1} & 1 & 0 & 1 \\\\\n",
+    "&  &   \\vdots & & \\\\\n",
+    "1^{k-2} & 0 & 1 & 0^{n-k-1} & 1 \\\\\n",
+    "1^{k-2} & 1 & 0 & 0^{n-k-1} & 1 \\\\\n",
+    "\\end{array}\n",
+    "\\right\\rbrace = \\bar{C}(n-1,k-1)\\cdot 1\n",
+    "$$\n",
+    "\n",
+    "where *boundary* combinations can be rewritten as:\n",
+    "   - $first(C(n-1,k)\\cdot 0) = 1^{k-1} \\, 0^{n-k-1} \\, 1\\, 0 $;\n",
+    "   - $last(C(n-1,k)\\cdot 0) = 1^{k-2} \\, 1 \\, 0^{n-k-1} \\, 1\\, 0 $;\n",
+    "   - $first(\\bar{C}(n-1,k-1)\\cdot 1) = 1^{k-2} \\, 0 \\, 0^{n-k-1} \\, 1 \\, 1 $;\n",
+    "   - $last(\\bar{C}(n-1,k-1)\\cdot 1) = 1^{k-1} \\, 0^{n-k-1} \\, 0 \\, 1 $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "combinations_gray = graycodes_combinations(6,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b1111 -1 -1\n",
+      "0b11011 2 4\n",
+      "0b11110 0 2\n",
+      "0b11101 0 1\n",
+      "0b10111 1 3\n",
+      "0b110011 2 5\n",
+      "0b110110 0 2\n",
+      "0b110101 0 1\n",
+      "0b111100 0 3\n",
+      "0b111010 1 2\n",
+      "0b111001 0 1\n",
+      "0b101011 1 4\n",
+      "0b101110 0 2\n",
+      "0b101101 0 1\n",
+      "0b100111 1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c, i, j in combinations_gray:\n",
+    "    print(bin(c), i, j)"
    ]
   },
   {
