--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -925,23 +925,70 @@
     "   - $first(C(n-1,k)\\cdot 0) = 1^{k-1} \\, 0^{n-k-1} \\, 1\\, 0 $;\n",
     "   - $last(C(n-1,k)\\cdot 0) = 1^{k-2} \\, 1 \\, 0^{n-k-1} \\, 1\\, 0 $;\n",
     "   - $first(\\bar{C}(n-1,k-1)\\cdot 1) = 1^{k-2} \\, 0 \\, 0^{n-k-1} \\, 1 \\, 1 $;\n",
-    "   - $last(\\bar{C}(n-1,k-1)\\cdot 1) = 1^{k-1} \\, 0^{n-k-1} \\, 0 \\, 1 $."
+    "   - $last(\\bar{C}(n-1,k-1)\\cdot 1) = 1^{k-1} \\, 0^{n-k-1} \\, 0 \\, 1 $.\n",
+    "   \n",
+    "The following is a Pythonic implementation of the above relation, ispired by Ruskey again:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def graycodes_combinations(n, k):\n",
+       "\n",
+       "    combination = set_all(k)\n",
+       "\n",
+       "    if not k or k == n: yield combination\n",
+       "\n",
+       "    def swap(n, k):\n",
+       "        nonlocal combination\n",
+       "        i, j = (n-2, n-1) if k < 2 else (k-2, n-1)\n",
+       "        combination = toggle_bits(combination, i, j)\n",
+       "        yield combination, i, j \n",
+       "\n",
+       "    def gen(n, k):\n",
+       "        if k in range(1, n):\n",
+       "            yield from itertools.chain(gen(n-1, k), swap(n, k), neg(n-1, k-1))\n",
+       "\n",
+       "    def neg(n, k):\n",
+       "        if k in range(1, n):\n",
+       "            yield from itertools.chain(gen(n-1, k-1), swap(n, k), neg(n-1, k))\n",
+       "\n",
+       "    yield combination, -1, -1\n",
+       "    yield from gen(n, k)\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "combinations_gray = graycodes_combinations(6,4)"
+    "python_code(graycodes_combinations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it can be used as follows, showing changing-bits positions too:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -969,7 +1016,7 @@
     }
    ],
    "source": [
-    "for c, i, j in combinations_gray:\n",
+    "for c, i, j in graycodes_combinations(6,4):\n",
     "    print(bin(c), i, j)"
    ]
   },
