Add doctests to functions `turn_on_last_zero` and `turn_off_last_bit`; moreover, now they supply the position of the toggled bit by product.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -676,6 +676,101 @@
     "graycodes_with_positions = graycodes_by_transition_sequence(rightmost_zeroes_in_binary_counting(3))\n",
     "for b, (code, p) in zip(count(), graycodes_with_positions):\n",
     "    print('{}\\t{}\\t{}'.format(bin(b), bin(code), p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simply via bitmasking\n",
+    "Previous argument is pretty creative but a bit hard to digest. Moreover, there is a *bitmasking* technique that allows us to find the position of the rightmost 0-bit. Here's the code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def turn_on_last_zero(S): \n",
+       "    \"\"\"\n",
+       "    Turns on the rightmost 0-bit in word `S`, producing all 1's if none.\n",
+       "\n",
+       "    By product, the position of toggled 0-bit is returned.\n",
+       "\n",
+       "    Examples\n",
+       "    ========\n",
+       "\n",
+       "    When a 0-bit is present:\n",
+       "    >>> S, z = turn_on_last_zero(0b10100111)\n",
+       "    >>> bin(S)\n",
+       "    '0b10101111'\n",
+       "    >>> z\n",
+       "    3\n",
+       "\n",
+       "    When a 0-bit is *implicitly* present:\n",
+       "    >>> S, z = turn_on_last_zero(0b11111)\n",
+       "    >>> bin(S)\n",
+       "    '0b111111'\n",
+       "    >>> z\n",
+       "    5\n",
+       "    \"\"\"\n",
+       "    SS = S | (S + 1)\n",
+       "    z = (SS ^ S).bit_length()-1\n",
+       "    return SS, z\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(turn_on_last_zero)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and can be used directly with binary counting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2**3-1):\n",
+    "    _, z = turn_on_last_zero(i)\n",
+    "    print(z)"
    ]
   },
   {
