Little fixes toward final version of graycodes for combinations, using homogeneous transposition relation.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -757,20 +757,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "0\n"
+      "1 0\n",
+      "3 1\n",
+      "3 0\n",
+      "7 2\n",
+      "5 0\n",
+      "7 1\n",
+      "7 0\n"
      ]
     }
    ],
    "source": [
     "for i in range(2**3-1):\n",
-    "    _, z = turn_on_last_zero(i)\n",
-    "    print(z)"
+    "    I, z = turn_on_last_zero(i)\n",
+    "    print(I, z)"
    ]
   },
   {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -918,7 +918,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,6 +949,10 @@
     "positions: call the two positions $i$ and $j$. Example: $\\underline{0}021\\underline{1}$ and $\\underline{1}021\\underline{0}$. In this example the positions that\n",
     "change are $i = 1$ and $j = 5$, and are underlined, as they will be in each of the example\n",
     "that follows.\n",
+    "   - the *homogenous transposition* condition: The permutations, say $\\pi$ and\n",
+    "$\\phi$ differ in exactly two positions $i$ and $j$, and only symbols less than or equal to\n",
+    "$min(\\pi_i , \\phi_j)$ occur between those two positions; example: $\\underline{0}000\\underline{1}12$ and \n",
+    "$\\underline{1}000\\underline{0}12$.\n",
     "\n",
     "[cg]:http://www.1stworks.com/ref/RuskeyCombGen.pdf"
    ]
@@ -1027,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -1040,7 +1044,9 @@
        "\n",
        "    combination = set_all(k)\n",
        "\n",
-       "    if not k or k == n: yield combination\n",
+       "    if not k or k == n: \n",
+       "        yield combination\n",
+       "        raise StopIteration()\n",
        "\n",
        "    def swap(n, k):\n",
        "        nonlocal combination\n",
@@ -1065,7 +1071,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -1092,27 +1098,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b1111 -1 -1\n",
-      "0b11011 2 4\n",
-      "0b11110 0 2\n",
-      "0b11101 0 1\n",
-      "0b10111 1 3\n",
-      "0b110011 2 5\n",
-      "0b110110 0 2\n",
-      "0b110101 0 1\n",
-      "0b111100 0 3\n",
-      "0b111010 1 2\n",
-      "0b111001 0 1\n",
-      "0b101011 1 4\n",
-      "0b101110 0 2\n",
-      "0b101101 0 1\n",
-      "0b100111 1 3\n"
+      "0b111 -1 -1\n",
+      "0b1101 1 3\n",
+      "0b1110 0 1\n",
+      "0b1011 0 2\n",
+      "0b11001 1 4\n",
+      "0b11010 0 1\n",
+      "0b11100 1 2\n",
+      "0b10101 0 3\n",
+      "0b10110 0 1\n",
+      "0b10011 0 2\n",
+      "0b110001 1 5\n",
+      "0b110010 0 1\n",
+      "0b110100 1 2\n",
+      "0b111000 2 3\n",
+      "0b101001 0 4\n",
+      "0b101010 0 1\n",
+      "0b101100 1 2\n",
+      "0b100101 0 3\n",
+      "0b100110 0 1\n",
+      "0b100011 0 2\n"
      ]
     }
    ],
    "source": [
-    "for c, i, j in graycodes_combinations(6,4):\n",
+    "for c, i, j in graycodes_combinations(6,3):\n",
     "    print(bin(c), i, j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using *homogeneous transposition* relation\n",
+    "\n",
+    "In this section we would like to produce a sequence of code such that belong to the *homogeneous transposition* relation pairwise. In order to accomplish that, we unfold the binomial term ${{n-1}\\choose{k-1}}$ and write the following recurrence:\n",
+    "$$\n",
+    "E(n, k) = \\left\\lbrace\n",
+    "\\begin{array}{cc}\n",
+    "0^{n} & \\text{if } k = 0\\\\\n",
+    "1^{n} & \\text{if } k = n\\\\\n",
+    "10^{n-1}\\circ 010^{n-2}\\circ\\ldots\\circ 0^{n-2}10\\circ 0^{n-1}1 & \\text{if } k = 1 \\\\\n",
+    "E(n-1,k)\\cdot 0 \\circ \\bar{E}(n-2,k-1)\\cdot 01 \\circ E(n-2, k-2)\\cdot 11 & otherwise\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "In order to understand previous recurrence we draw a simple schema:\n",
+    "\n",
+    "$$\n",
+    "\\left.\n",
+    "\\begin{array}{ccccc}\n",
+    "1^{k-1} & 1 & 0 & 0^{n-k-2} & 0 \\\\\n",
+    "1^{k-1} & 0 & 1 & 0^{n-k-2} & 0 \\\\\n",
+    " &  &   \\vdots & & \\\\\n",
+    "1^{k-1} & 0^{n-k-2} & 1 & 0 & 0 \\\\\n",
+    "1^{k-1} & 0^{n-k-2} & 0 & 1 & 0 \\\\\n",
+    "&  &   = & & \\\\\n",
+    "1^{k-2} & 1 & 0^{n-k-1} & 1 & 0 \\\\\n",
+    "\\end{array}\n",
+    "\\right\\rbrace = E(n-1,k)\\cdot 0 \\\\\n",
+    "$$\n",
+    "\n",
+    "for the second part:\n",
+    "\n",
+    "$$\n",
+    "\\left.\n",
+    "\\begin{array}{cccccc}\n",
+    "1^{k-2} & \\underline{0} & 0^{n-k-2} & \\underline{1} & 1 & 0 \\\\\n",
+    "&  &   = & & \\\\\n",
+    "1^{k-2} & 0^{n-k-2} & 0 & 1 & 1 & 0 \\\\\n",
+    "1^{k-2} & 0^{n-k-2} & 1 & 0 & 1 & 0 \\\\\n",
+    "&  &   \\vdots & & & \\\\\n",
+    "1^{k-2} & 0 & 1 & 0^{n-k-2} & 1 & 0 \\\\\n",
+    "1^{k-2} & 1 & 0 & 0^{n-k-2} & 1 & 0 \\\\\n",
+    "\\end{array}\n",
+    "\\right\\rbrace = \\bar{E}(n-2,k-1)\\cdot 10 \\\\\n",
+    "$$\n",
+    "\n",
+    "for the third part:\n",
+    "\n",
+    "$$\n",
+    "\\left.\n",
+    "\\begin{array}{cccccc}\n",
+    "1^{k-2} & \\underline{0} & 0 & 0^{n-k-2} & 1 & \\underline{1} \\\\\n",
+    "&  &   = & & & \\\\\n",
+    "1^{k-3} & 1 & 0 & 0^{n-k-1} & 1 & 1 \\\\\n",
+    "1^{k-3} & 0 & 1 & 0^{n-k-1} & 1 & 1 \\\\\n",
+    " &  &   \\vdots & & & \\\\\n",
+    "1^{k-3} & 0^{n-k-1} & 1 & 0 & 1 & 1 \\\\\n",
+    "1^{k-3} & 0^{n-k-1} & 0 & 1 & 1 & 1 \\\\\n",
+    "\\end{array}\n",
+    "\\right\\rbrace = E(n-2,k-2)\\cdot 11 \\\\\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\t-1\t   0b111\n",
+      "3\t2\t  0b1011\n",
+      "1\t2\t  0b1101\n",
+      "0\t1\t  0b1110\n",
+      "4\t3\t 0b10110\n",
+      "0\t1\t 0b10101\n",
+      "2\t1\t 0b10011\n",
+      "1\t3\t 0b11001\n",
+      "0\t1\t 0b11010\n",
+      "1\t2\t 0b11100\n",
+      "5\t4\t0b101100\n",
+      "0\t2\t0b101001\n",
+      "0\t1\t0b101010\n",
+      "3\t2\t0b100110\n",
+      "0\t1\t0b100101\n",
+      "2\t1\t0b100011\n",
+      "1\t4\t0b110001\n",
+      "0\t1\t0b110010\n",
+      "1\t2\t0b110100\n",
+      "2\t3\t0b111000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c, i, j in graycodes_combinations_homogeneous(6,3):\n",
+    "    print('{}\\t{}\\t{:>8}'.format(i, j, bin(c),))"
    ]
   },
   {
