Add a notebook about the game of life with initial reference to start with. Add a few more reference for bit-masking techniques.

--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
-    "<br>May 31, 2016: primality testing (<i>broken</i>)\n",
+    "<br>June 27, 2016: add external references\n",
+    "<br>May 31, 2016: primality testing by sets (<i>broken</i>)\n",
     "<br>May 22, 2016: subsets sums with Gray codes\n",
     "<br>May 21, 2016: basics, subsets sums\n",
     "</div>\n",
@@ -29,13 +30,24 @@
     "\n",
     "   - [__The Aggregate Magic Algorithms__][aggregate], by _Department of Electrical and Computer Engineering at the University of Kentucky_\n",
     "   - [__Bit Twiddling Hacks__][seander], by _Sean Eron Anderson_\n",
+    "   - [__Hacker's delight__][hd], by _Warren_\n",
     "   \n",
     "On the other hand, the following pages have a spirit toward programming contests:\n",
     "\n",
     "   - [__CPSC 490 202 - Problem Solving in Computer Science__][CPSC 490 202 current] ([old][CPSC 490 202 old] version)\n",
     "   \n",
+    "A focused application about compressed representation can be found here:\n",
+    "   - https://code.google.com/archive/p/compressedbitset/\n",
+    "   - https://sdm.lbl.gov/fastbit/\n",
+    "   - http://crd-legacy.lbl.gov/~kewu/fastbit/compression.html\n",
+    "   \n",
+    "Blog posts that inspired this document are the following:\n",
+    "   - http://redrating.blogspot.it/2013/08/algo-and-techniques-bitmask.html\n",
+    "   - https://www.quora.com/What-is-bitmasking-What-kind-of-problems-can-be-solved-using-it\n",
+    "   \n",
     "[aggregate]:http://aggregate.org/MAGIC/\n",
     "[seander]:http://graphics.stanford.edu/~seander/bithacks.html\n",
+    "[hd]:http://www.hackersdelight.org/\n",
     "\n",
     "[CPSC 490 202 old]:http://www.ugrad.cs.ubc.ca/~cs490/sec202/\n",
     "[CPSC 490 202 current]:http://www.ugrad.cs.ubc.ca/~cs490/2015W2/"
