Add miscellaneous references to the `index` notebook.

--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -4,12 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Massimo Nocentini<br>May 17, 2016: big-bang</div>\n",
+    "<div align=\"right\">Massimo Nocentini\n",
+    "<br>June 27, 2016: miscellaneous references\n",
+    "<br>May 17, 2016: big-bang\n",
+    "</div>\n",
     "\n",
     "<div align=\"center\">\n",
     "<b>Abstract</b><br>\n",
     "This document is an index of programming problems I worked on; it is a rolling-release stream.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miscellaneous references"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   - http://www.codeforces.com/blog/entry/337\n",
+    "   - https://www.topcoder.com/community/data-science/data-science-tutorials/assignment-problem-and-hungarian-algorithm/\n",
+    "   - http://codeforces.com/contest/11/problem/D\n",
+    "   - https://www.codechef.com/problems/TOOLS\n",
+    "   - http://codeforces.com/problemset/tags/bitmasks\n",
+    "   - http://codeforces.com/contest/664/problem/A"
    ]
   },
   {
