Add licence info in the footer.

--- a/tutorials/gotchas.ipynb
+++ b/tutorials/gotchas.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div align=\"right\">\n",
+    "Massimo Nocentini<br>\n",
+    "<br>April 28, 2016: counting sort\n",
+    "<br>April 26, 2016: hidden squares, Bunch pattern\n",
+    "</div>\n",
+    "<br>\n",
+    "<div align=\"center\">\n",
+    "<b>Abstract</b><br>\n",
+    "This document collect some gotchas and experiment in Python, to understand objects and execution pitfalls.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Some gotchas\n",
     "\n",
     "The following notebook collect some cell to understand -- the hard way -- little, but *subtle*, concepts.\n",
@@ -1283,6 +1299,14 @@
    ],
    "source": [
     "%timeit counting_sort(B, sort_boundary=1/8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\">Gotchas tutorial</span> by <a xmlns:cc=\"http://creativecommons.org/ns#\" href=\"mailto:massimo.nocentini@unifi.it\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">Massimo Nocentini</a> is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\">Creative Commons Attribution-NonCommercial 4.0 International License</a>.<br />Based on a work at <a xmlns:dct=\"http://purl.org/dc/terms/\" href=\"https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/gotchas.ipynb\" rel=\"dct:source\">https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/gotchas.ipynb</a>."
    ]
   }
  ],
