Add a section about *multimethods*.

--- a/tutorials/gotchas.ipynb
+++ b/tutorials/gotchas.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
+    "<br>June 15, 2016: multimethods references\n",
     "<br>April 28, 2016: counting sort\n",
     "<br>April 26, 2016: hidden squares, Bunch pattern\n",
     "</div>\n",
@@ -1299,6 +1300,26 @@
    ],
    "source": [
     "%timeit counting_sort(B, sort_boundary=1/8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Language abstractions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multimethods\n",
+    "\n",
+    "   - http://www.artima.com/weblogs/viewpost.jsp?thread=101605 (by Guido Van Rossum)\n",
+    "   - https://adambard.com/blog/implementing-multimethods-in-python/\n",
+    "   - http://python-3-patterns-idioms-test.readthedocs.io/en/latest/MultipleDispatching.html\n",
+    "   - http://bob.ippoli.to/archives/2005/03/30/five-minute-multimethods-in-python-using-dispatch/\n",
+    "   - https://github.com/peteut/multimethods/blob/master/README.rst"
    ]
   },
   {
